added swagger and error handling middleware
